[package]
name = "codic"
license = "MIT"
version = "0.1.0"
authors = ["asobininn <asobininn2000@gmail.com>"]
edition = "2018"
description = "codic API binding. Translate variable name from Japanese to English"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = "2.33.3"
